deploy: bf89395b7aa28692c7fc3f7a19bdf79c8edfb0d6

--- a/aoc/2015.html
+++ b/aoc/2015.html
@@ -158,24 +158,24 @@
 <p>This contains tasks from the <a href="https://adventofcode.com/2015">year 2015</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="days"><a class="header" href="#days">Days</a></h3>
 <ul>
-<li><a href="2015-1.html">Day 1</a></li>
-<li><a href="2015-2.html">Day 2</a></li>
-<li><a href="2015-3.html">Day 3</a></li>
-<li><a href="2015-4.html">Day 4</a></li>
-<li><a href="2015-5.html">Day 5</a></li>
-<li><a href="2015-6.html">Day 6</a></li>
 <li><a href="2015-7.html">Day 7</a></li>
+<li><a href="2015-6.html">Day 6</a></li>
+<li><a href="2015-5.html">Day 5</a></li>
+<li><a href="2015-4.html">Day 4</a></li>
+<li><a href="2015-3.html">Day 3</a></li>
+<li><a href="2015-2.html">Day 2</a></li>
+<li><a href="2015-1.html">Day 1</a></li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2016-1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2015-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2015-7.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -185,11 +185,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2016-1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2015-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2015-7.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
