--- a/aoc/2023.html
+++ b/aoc/2023.html
@@ -158,40 +158,40 @@
 <p>This contains tasks from the <a href="https://adventofcode.com/2023">year 2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="days"><a class="header" href="#days">Days</a></h3>
 <ul>
-<li><a href="2023-1.html">Day 1</a></li>
-<li><a href="2023-2.html">Day 2</a></li>
-<li><a href="2023-3.html">Day 3</a></li>
-<li><a href="2023-4.html">Day 4</a></li>
-<li><a href="2023-5.html">Day 5</a></li>
-<li><a href="2023-6.html">Day 6</a></li>
-<li><a href="2023-7.html">Day 7</a></li>
-<li><a href="2023-8.html">Day 8</a></li>
-<li><a href="2023-9.html">Day 9</a></li>
-<li><a href="2023-11.html">Day 11</a></li>
-<li><a href="2023-12.html">Day 12</a></li>
-<li><a href="2023-13.html">Day 13</a></li>
-<li><a href="2023-14.html">Day 14</a></li>
-<li><a href="2023-15.html">Day 15</a></li>
-<li><a href="2023-16.html">Day 16</a></li>
-<li><a href="2023-17.html">Day 17</a></li>
-<li><a href="2023-18.html">Day 18</a></li>
-<li><a href="2023-19.html">Day 19</a></li>
-<li><a href="2023-21.html">Day 21</a></li>
-<li><a href="2023-22.html">Day 22</a></li>
-<li><a href="2023-23.html">Day 23</a></li>
-<li><a href="2023-24.html">Day 24</a></li>
 <li><a href="2023-25.html">Day 25</a></li>
+<li><a href="2023-24.html">Day 24</a></li>
+<li><a href="2023-23.html">Day 23</a></li>
+<li><a href="2023-22.html">Day 22</a></li>
+<li><a href="2023-21.html">Day 21</a></li>
+<li><a href="2023-19.html">Day 19</a></li>
+<li><a href="2023-18.html">Day 18</a></li>
+<li><a href="2023-17.html">Day 17</a></li>
+<li><a href="2023-16.html">Day 16</a></li>
+<li><a href="2023-15.html">Day 15</a></li>
+<li><a href="2023-14.html">Day 14</a></li>
+<li><a href="2023-13.html">Day 13</a></li>
+<li><a href="2023-12.html">Day 12</a></li>
+<li><a href="2023-11.html">Day 11</a></li>
+<li><a href="2023-9.html">Day 9</a></li>
+<li><a href="2023-8.html">Day 8</a></li>
+<li><a href="2023-7.html">Day 7</a></li>
+<li><a href="2023-6.html">Day 6</a></li>
+<li><a href="2023-5.html">Day 5</a></li>
+<li><a href="2023-4.html">Day 4</a></li>
+<li><a href="2023-3.html">Day 3</a></li>
+<li><a href="2023-2.html">Day 2</a></li>
+<li><a href="2023-1.html">Day 1</a></li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2022-15.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023-25.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -201,11 +201,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2022-15.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023-25.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
