deploy: ad466487ff8ada25f15252477b7c8f5195ee0711

--- a/print.html
+++ b/print.html
@@ -182,39 +182,7 @@
     println!("");
     println!("For the proper usecase I used {}.", tools.join(" and "));
 <span class="boring">}</span></code></pre></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="tba"><a class="header" href="#tba">TBA</a></h1>
-<!-- Advent --> <!--
-<h1 id="-its-the-time-of-the-year-again-"><a class="header" href="#-its-the-time-of-the-year-again-">🎄🎄 Its the time of the year again. 🎄🎄</a></h1>
-<p>Shortcut to <a href="https://adventofcode.com">Advent of code page</a> and my <a href="/adventofcode.html">solution page</a>.</p>
-<div class="table-wrapper"><table><thead><tr><th style="text-align: center">Day</th><th style="text-align: center">Part 1</th><th style="text-align: center">Part 2</th></tr></thead><tbody>
-<tr><td style="text-align: center">1</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">2</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">3</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">4</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">5</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">6</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">7</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">8</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">9</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">10</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">11</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">12</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">13</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">14</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">15</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">16</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">17</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">18</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">19</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">20</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">21</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">22</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">23</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">24</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">25</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-<tr><td style="text-align: center">--&gt;</td><td style="text-align: center"></td><td style="text-align: center"></td></tr>
-</tbody></table>
-</div><div style="break-before: page; page-break-before: always;"></div><h2 id="about-this-page"><a class="header" href="#about-this-page">About this page</a></h2>
+<div style="break-before: page; page-break-before: always;"></div><h2 id="about-this-page"><a class="header" href="#about-this-page">About this page</a></h2>
 <p>This is my own personal page. Feel free to see the pages.</p>
 <h2 id="about-me"><a class="header" href="#about-me">About me</a></h2>
 <p>I am a student at Charles University studying computer science. My CV can be found here:</p>
