deploy: 13b71933487b4d1957fd1bc67c85a855b38d653b

--- a/mff.html
+++ b/mff.html
@@ -165,7 +165,7 @@
 <li><a href="./mff/past-ii.pdf">Probability and statistics 2</a></li>
 <li><a href="./mff/polyhedra.pdf">Polyhedral combinatorics</a></li>
 <li><a href="./mff/temno.pdf">Teorie množin</a></li>
-<li><a href="./mff/selected-chapters-kg.pdf">Selected chapters from kombinatorics (not finished yet)</a></li>
+<li><a href="./mff/selected-chapters-kg.pdf">Selected chapters from kombinatorics (not finished yet)</a> and <a href="./mff/selected-chapters-kg-dark.pdf">dark version</a></li>
 </ul>
 <h2 id="odkazy-na-předměty"><a class="header" href="#odkazy-na-předměty">Odkazy na předměty</a></h2>
 <div class="table-wrapper"><table><thead><tr><th style="text-align: center">Předmět</th><th style="text-align: center">Odkazy</th></tr></thead><tbody>
