deploy: 58eaf02d1496f3ac79d3a7959c9e743d9bb3b43e

--- a/mff.html
+++ b/mff.html
@@ -159,13 +159,13 @@
 <h2 id="zápisky"><a class="header" href="#zápisky">Zápisky</a></h2>
 <p>Občas stihnu sepsat nějaké zápisky z přednášky a pokud stojí (aspoň trochu) za to, tak se tady budou nacházet. Veškeré texty lze najív v repozitáři na <a href="https://github.com/metury/notes">GitHubu</a>.</p>
 <ul>
-<li>Flows, paths and cuts - [<a href="./mff/fpc.pdf">light</a>|<a href="./mff/fpc-dark.pdf">dark</a>]</li>
+<li><a href="./mff/fpc.pdf">Flows, paths and cuts</a></li>
 <li><a href="./mff/grg.pdf">Geometric Representations of Graphs</a></li>
 <li><a href="./mff/kg.pdf">Kombinatorika a grafy</a></li>
 <li><a href="./mff/past-ii.pdf">Probability and statistics 2</a></li>
 <li><a href="./mff/polyhedra.pdf">Polyhedral combinatorics</a></li>
 <li><a href="./mff/temno.pdf">Teorie množin</a></li>
-<li>Selected chapters from kombinatorics- [<a href="./mff/selected-chapters-kg.pdf">light</a>|<a href="./mff/selected-chapters-kg-dark.pdf">dark</a>]</li>
+<li><a href="./mff/selected-chapters-kg.pdf">0Selected chapters from kombinatorics</a></li>
 </ul>
 <h2 id="odkazy-na-předměty"><a class="header" href="#odkazy-na-předměty">Odkazy na předměty</a></h2>
 <div class="table-wrapper"><table><thead><tr><th style="text-align: center">Předmět</th><th style="text-align: center">Odkazy</th></tr></thead><tbody>
